# fund-finance-credit-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/raw/: capital_calls.csv  capital_commitments.csv  covenant_terms.csv  facility_terms.csv  fund_managers.csv  funds.csv  investors.csv  monitoring_events.csv  nav_history.csv  portfolio_companies.csv
docs/: ANALYST_USER_GUIDE.md  ARCHITECTURE.md  AUDIT_LOGGING.md  CLI_REFERENCE.md  CONTROL_FRAMEWORK.md  CREDIT_OFFICER_USER_GUIDE.md  DATA_DICTIONARY.md  DATA_QUALITY_CONTROLS.md  DEMO_WALKTHROUGH.md  MONITORING_RUNBOOK.md  OPERATIONS_RUNBOOK.md  PORTFOLIO_SUMMARY_EXPORT.md  REPORTING_PACKAGES.md  REVIEWER_GUIDE.md  ROADMAP.md  SAMPLE_OUTPUT_GUIDE.md  STRESS_TESTING.md  UNDERWRITING_METHODOLOGY.md  WATCHLIST_MONITORING.md
scripts/: demo_workflow.sh  preflight_check.sh
sql/: schema.sql
src/fund_finance/: cli.py
src/fund_finance/analytics/: borrowing_base.py  covenant_monitoring.py  nav_facility.py  risk_scoring.py  stress_testing.py  watchlist.py
src/fund_finance/config/: settings.py
src/fund_finance/controls/: audit.py  data_quality.py
src/fund_finance/db/: connection.py  load.py
src/fund_finance/etl/: generate_sample_data.py
tests/: conftest.py  test_audit.py  test_borrowing_base.py  test_cli_stress.py  test_covenant_monitoring.py  test_data_quality.py  test_portfolio_summary.py  test_report_generation.py  test_report_index.py  test_risk_scoring.py  test_stress_testing.py  test_watchlist.py
(+3 files in other folders)
