[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-finance-credit-platform"
version = "0.1.0"
description = "A simulated fund finance credit underwriting and portfolio monitoring platform for subscription line, NAV, and hybrid facilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jenna Silvera" }
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    "reportlab>=4.1.0",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0"
]

[project.scripts]
fund-finance = "fund_finance.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=src --cov-report=term-missing"
